css/got-drought.css
/* Custom Styles for Got Drought */

.water-footprint {
  margin: 1em 0;
  padding: 1em;
  /* color: white; */
  color: inherit;
  /*background: #09c;*/
  background: inherit;
}

.water-footprint .heading {
  font-size: 3em;
  line-height: 100%;
}

.water-footprint select {
  border-radius: 5px;
  border: none;
  color: #666;
  background: white;
}

.water-footprint .result {
  margin: 3em 0;
  text-transform: uppercase;
  font-weight: bold;
}

.water-footprint .result p {
  margin: .5em 0;
}

.water-footprint .water-amount {
  /* font-size: 2em;
  line-height: 100%; */
}

.water-footprint .secondary {
  margin-top: 4em;
}

.water-footprint .secondary p {
  font-size: 80%;
}

.water-footprint .secondary .water-amount {
  font-size: 1.6em;
}

